force-app/main/default/objects/BTN_Meeting_Room__c/BTN_Meeting_Room__c.object-meta.xml
<CustomObject>
    <label>Meeting Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>