force-app/main/default/objects/BTN_Meeting_Room__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Room is available to use</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>